...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tv_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rssi_title"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_connectable"
...
