<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/scan_start"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_error"
        android:title="@string/action_error" />
</menu>